fixed hole issue and using cutoff geometry instead of combining

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ html {
 .controlsDiv{
     position: fixed;
     top: 0;
-    height: 70vh;
+    height: 0vh;
     color: rgb(0, 0, 0);
     padding: 10px;
     z-index: 10;
